test/integration/good/numeric-literal.stan
transformed data {
    int a = 0;
    int b = 10_000;
    real c = .12;
    real d = 1.;
    real e = 1.002_345;
    real f = .99_99_99e+1_25;
    real g = 1_100_100.0_345;
}