test/integration/bad/op_intdivide_bad_3.stan
data {
  real a;
  int b;
}
transformed data {
  real c = a %/% b;
  real c = a %/% b;
}
